# Robotics_UR5

./: .gitignore  .gitmodules  Doxyfile  README.md  assignments.py  v5_luca_ur5_generic.py
cpp/: CMakeLists.txt  main.cpp  motionPlan.cpp
html/: CMakeLists_8txt.html  CONTRIBUTING_8md.html  additional__requirements_8txt.html  assignments_8py.html  autoanchor_8py.html  autobatch_8py.html  callbacks_8py.html  classes.html  classexport_1_1iOSModel-members.html  classexport_1_1iOSModel__inherit__graph.map  classify_2predict_8py.html  classify_2train_8py.html  classify_2val_8py.html  classmodels_1_1common_1_1AutoShape-members.html  classmodels_1_1common_1_1AutoShape.html  classmodels_1_1common_1_1AutoShape__inherit__graph.md5  classmodels_1_1common_1_1Bottleneck-members.html  classmodels_1_1common_1_1BottleneckCSP__coll__graph.md5  classmodels_1_1common_1_1BottleneckCSP__inherit__graph.map  classmodels_1_1common_1_1C3.html  classmodels_1_1common_1_1C3Ghost-members.html  classmodels_1_1common_1_1C3Ghost__inherit__graph.map  classmodels_1_1common_1_1C3Ghost__inherit__graph.md5  classmodels_1_1common_1_1C3TR-members.html  classmodels_1_1common_1_1C3TR__coll__graph.md5  classmodels_1_1common_1_1C3x-members.html  classmodels_1_1common_1_1Classify__coll__graph.map  classmodels_1_1common_1_1Concat.html  classmodels_1_1common_1_1Concat__inherit__graph.map  classmodels_1_1common_1_1Concat__inherit__graph.md5  classmodels_1_1common_1_1Contract__coll__graph.map  classmodels_1_1common_1_1Conv__coll__graph.map  classmodels_1_1common_1_1Conv__inherit__graph.map  classmodels_1_1common_1_1Conv__inherit__graph.md5  classmodels_1_1common_1_1CrossConv-members.html  classmodels_1_1common_1_1CrossConv__coll__graph.md5  classmodels_1_1common_1_1DWConv-members.html  classmodels_1_1common_1_1DWConvTranspose2d.html  classmodels_1_1common_1_1DWConvTranspose2d__coll__graph.md5  classmodels_1_1common_1_1DetectMultiBackend.html  (+331 more)
kinematics/: kinematics.cpp  v5_kinematics_dev.py
latex/: CMakeLists_8txt.tex  README_8zh-CN_8md.tex  activations_8py.tex  additional__requirements_8txt.tex  assignments_8py.tex  benchmarks_8py.tex  callbacks_8py.tex  classexport_1_1iOSModel.tex  classexport_1_1iOSModel__coll__graph.md5  classify_2val_8py.tex  classmodels_1_1common_1_1AutoShape__inherit__graph.md5  classmodels_1_1common_1_1Bottleneck.tex  classmodels_1_1common_1_1C3.tex  classmodels_1_1common_1_1C3Ghost__coll__graph.md5  classmodels_1_1common_1_1C3SPP.tex  classmodels_1_1common_1_1C3TR.tex  classmodels_1_1common_1_1C3TR__coll__graph.md5  classmodels_1_1common_1_1C3x__coll__graph.md5  classmodels_1_1common_1_1Classify__inherit__graph.md5  classmodels_1_1common_1_1Concat__coll__graph.md5  classmodels_1_1common_1_1Contract.tex  classmodels_1_1common_1_1Contract__inherit__graph.md5  classmodels_1_1common_1_1Conv.tex  classmodels_1_1common_1_1Conv__coll__graph.md5  classmodels_1_1common_1_1Conv__inherit__graph.md5  classmodels_1_1common_1_1CrossConv.tex  classmodels_1_1common_1_1CrossConv__inherit__graph.md5  classmodels_1_1common_1_1DWConv.tex  classmodels_1_1common_1_1DWConvTranspose2d__inherit__graph.md5  classmodels_1_1common_1_1DetectMultiBackend.tex  classmodels_1_1common_1_1DetectMultiBackend__coll__graph.md5  classmodels_1_1common_1_1Detections.tex  classmodels_1_1common_1_1Expand.tex  classmodels_1_1common_1_1Focus__coll__graph.md5  classmodels_1_1common_1_1GhostBottleneck.tex  classmodels_1_1common_1_1GhostConv.tex  classmodels_1_1common_1_1GhostConv__inherit__graph.md5  classmodels_1_1common_1_1SPPF.tex  classmodels_1_1common_1_1SPP__coll__graph.md5  classmodels_1_1common_1_1TransformerBlock.tex  (+139 more)
motion plan/: CMakeLists.txt  kinematics.cpp  kinematics.h  main.cpp  motionPlan.cpp  motionPlan.h  package.xml  v5_motionPlan_dev.py
motion plan/msg/: legoArray.msg
pietro/: README.md  spawn_models.py  spawn_models_rotation.py  zed.py
ur5 generic/: params.py  ur5_generic.py
vision/: geometric_utils.py  image_utils.py  manual_spawn_models.py  (+5 more)
(+713 files in other folders)
