<?xml version="1.0"?>
<package format="2">
  <name>motion_plan_pkg</name>
  <version>0.0.0</version>
  <description>Prova motion_plan_pkg</description>
  
  <maintainer email="mfocchi@todo.todo">mfocchi</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>
