<?xml version="1.0"?>
<package format="2">
  <name>motion_plan_pkg</name>
  <version>0.0.0</version>
  <description>Prova motion_plan_pkg</description>
  
  <maintainer email="christian@todo.todo">christian</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>

<exec_depend>message_runtime</exec_depend>
</package>
